# tianting-lite

./: .env.example  .gitignore  .gitmodules  .versionrc  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  reademe.md  requirements.txt  test_runner.py
.claude/: settings.json  settings.local.json
.claude/scripts/: guard-prod-path.sh
.github/workflows/: ci.yml  memoryhub.yml
.promptx/: pouch.json  pouch.json.backup
.promptx/memory/: declarative.md
.promptx/resource/: project.registry.json
.specstory/history/: 2025-06-27_14-16Z-查看项目中的-md文件.md  2025-06-28_04-05Z-讨论天庭v4与太白的差距.md  2025-06-28_06-28Z-解决wsl和ubuntu安装错误.md  2025-06-30_08-40Z-激活羲和的讨论.md  2025-06-30_09-28Z-配置promptx测试版本的json文件.md  2025-06-30_09-33Z-untitled.md  2025-06-30_09-35Z-激活鲁班.md  2025-06-30_10-22Z-激活女娲的正确路径.md  2025-06-30_11-42Z-激活女娲与查看welecom.md  2025-06-30_11-48Z-激活鲁班.md  2025-06-30_11-51Z-激活女娲的讨论.md  2025-06-30_12-40Z-激活鲁班角色.md  2025-06-30_15-14Z-upgrade-promptx-with-cursor-integration.md  2025-06-30_16-46Z-回顾上次讨论的精华.md  2025-07-01_02-15Z-重新设计v0-2蓝图.md  2025-07-01_03-57Z-逐步完善文档内容计划.md  2025-07-01_05-31Z-documentation-updates-and-next-steps.md  2025-07-01_08-17Z-review-documents-and-past-conversations.md  2025-07-01_11-57Z-当前进度与下一步计划.md  2025-07-01_13-00Z-document-updates-and-project-progress-summary.md
.tmp-test/tasks/: demo-01-python-backend-developer.task.json  demo-02-python-backend-developer.task.json  demo-03-devops-engineer.task.json
archive/: README.md
archive/legacy-docs/: tianting-new.md
demo-workspace/: launcher.sh  monitor.sh  nohup.out
demo-workspace/tiangong-alpha-logs/: .tiangong-session.json
demo-workspace/tiangong-alpha-logs-final/: .tiangong-session.json
demo-workspace/tiangong-final-demo/: .tiangong-session.json
docs/: 00-roadmap.md  01-requirements-analysis.md  02-user-journey.md  03-overall-design.md  03a-user-story.md  04-technical-selection.md  05-detailed-design.md  06-oes-spec.md  07-testing-plan.md  07a-ai-collab-workflow.md  10-retrospective.md  CHANGELOG.md  CONTRIBUTING-DOCS.md  MCP配置说明.md  README.md  README_MCP.md  ai.md  cli-usage.md  index.md  resource-management.md  万宝录.md  天条玉册.md  工程文档.md
docs/architecture/: jsonl-indexing.md
docs/knowledge/: index.json.bak
docs/research/: lock-mechanism.md  roaring-bitmap.md
docs/templates/: subagent-task.md
memoryhub_data/: memory.db
my-claude-workspace/: launcher.sh  monitor.sh
normaldocs/: OES.md
review_logs/: core-01-review.md
scripts/: benchmark_memoryhub.py  lint-doc-status.mjs  memoryhub_cli.py
src/: memoryhub_cli.py  setup.py
src/memoryhub/: __init__.py  jsonl_dao.py  memory_manager.py  roaring_bitmap_tag_index.py  sqlite_dao.py
src/reporter/: index.mjs
tasks/: docs-01-knowledge-index.task.json
tasks/ci/: ci-01-lint-workflow.task.json  ci-02-unit-workflow.task.json
tasks/core/: core-01-memoryhub-design.task.json  core-01-review.task.json  core-02-memoryhub-impl.task.json  core-02a-memoryhub-skeleton.task.json  core-02b-memoryhub-sqlite.task.json  core-02c-memoryhub-jsonlayer.task.json  core-02d-memoryhub-stats.task.json  core-02e-memoryhub-optimization.task.json  core-02e1-jsonl-index.task.json  core-02e2-meta-update.task.json  core-02e3-rollover-cli.task.json  core-02e4-stats-split.task.json  core-02e5-benchmark-gate.task.json  core-03a-ci-green.task.json  core-03a-hotfix-windows-handle.task.json  core-03a-roaring-bitmap-index.task.json  core-03b-dispatcher-serial.task.json  dispatcher-01-base.task.json  harvester-01-base.task.json  integration-01-seqthinking-adapter.task.json  integration-02-mcp-start-plan.task.json  integration-03-mcp-add-todo.task.json  launcher-01-base.task.json  memoryhub-01-base.task.json  reporter-01-base.task.json  reporter-02-read-mcp.task.json  verifier-01-base.task.json
tasks/demo/: PLAN.md  (+1 more)
test_persistence/: memory.db
tests/: dispatcher.autoPlan.test.mjs
tianting-v1-false/: README.md
tianting-v1-false/v1.0-intelligent-workflow/: .env.example  .gitignore  CURRENT-VERSION-STATUS.md  INSTALL.md  MVP-0-TO-MVP-1-TRANSITION.md  MVP-SCOPE-AND-ROADMAP.md  OES-EXECUTION-GUIDE.md  PROJECT-COMPLETION-REPORT.md  PROJECT-EXECUTION-GUIDE.md  QUICK-START-GUIDE.md  README.md  docker-compose.yml  install.sh  pyproject.toml  quick-start.sh  quick_start_server.py  setup-env.sh  simple-frontend.html
tianting-v1-false/v1.0-intelligent-workflow/.claude/: settings.local.json
tianting-v1-false/v1.0-intelligent-workflow/.promptx/resource/: project.registry.json
tianting-v1-false/v1.0-intelligent-workflow/development/architecture/: technical-architecture.md
tianting-v1-false/v1.0-intelligent-workflow/docs/: PROJECT-CONTROL.md  PROJECT-MAINTENANCE-CHECKLIST.md  TROUBLESHOOTING.md  architecture-and-ui-design.md  system-overview-visual.md  user-journey-final.md
tianting-v1-false/v1.0-intelligent-workflow/docs/archive/: CLAUDE-API-EMERGENCY-FIX.md  DOCUMENT-INTEGRITY-REPORT.md
tianting-v1-false/v1.0-intelligent-workflow/planning/: implementation-roadmap.md  requirements-breakdown-final.md  user-stories-breakdown.md
tianting-v1-false/v1.0-intelligent-workflow/resources/: estimation-methods.md  research-paper-guide.md
tianting-v1-false/v1.0-intelligent-workflow/scripts/: health-check.sh  init-db.sql  reset-environment.sh  setup-project.sh  start-all-services.sh  stop-all-services.sh
tianting-v1-false/v1.0-intelligent-workflow/tianting-env/: pyvenv.cfg
tianting-v2/: CLAUDE.md  README.md  package.json  pnpm-lock.yaml  requirements.txt  tianting.config.yaml
tianting-v2/src/: pyproject.toml
tianting-v2/src/dispatcher/: autoPlan.mjs  mcpAdapter.mjs  mcpPlanner.mjs
tianting-v2/src/harvester/: index.mjs
tianting-v2/src/launcher/: index.mjs
tianting-v2/src/memoryhub/: __init__.py  jsonl_dao.py  memory_manager.py  roaring_bitmap_tag_index.py  sqlite_dao.py  tag_index.py
tianting-v2/src/memoryhub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tianting-v2/src/reporter/: index.mjs
tianting-v2/src/verifier/: index.mjs
(+174 files in other folders)
