[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memoryhub"
version = "0.2.0"
description = "MemoryHub - Layered Memory Management for Tianting-v2"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pysimdjson"]

[tool.setuptools]
packages = ["memoryhub"]